--- a/popularity_corner/best_model/analyse_df_sans_meteo.ipynb
+++ b/popularity_corner/best_model/analyse_df_sans_meteo.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('df_sans_meteo.csv',index_col=0)"
+    "df = pd.read_csv('df_sans_meteo_copy.csv',index_col=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -21,27 +21,27 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 7939 entries, 0 to 9113\n",
+      "Int64Index: 7535 entries, 0 to 8401\n",
       "Data columns (total 15 columns):\n",
-      " #   Column                 Non-Null Count  Dtype  \n",
-      "---  ------                 --------------  -----  \n",
-      " 0   title                  7939 non-null   object \n",
-      " 1   release_date           7939 non-null   object \n",
-      " 2   genre                  7939 non-null   object \n",
-      " 3   duration               7939 non-null   object \n",
-      " 4   director               7939 non-null   object \n",
-      " 5   producers              7939 non-null   object \n",
-      " 6   cast                   7939 non-null   object \n",
-      " 7   nationality            7939 non-null   object \n",
-      " 8   distributor            7939 non-null   object \n",
-      " 9   box_office_title       7939 non-null   object \n",
-      " 10  box_office_first_week  7939 non-null   int64  \n",
-      " 11  press_eval             7939 non-null   object \n",
-      " 12  viewers_eval           7939 non-null   object \n",
-      " 13  views                  7939 non-null   float64\n",
-      " 14  budget                 7939 non-null   object \n",
-      "dtypes: float64(1), int64(1), object(13)\n",
-      "memory usage: 992.4+ KB\n"
+      " #   Column                 Non-Null Count  Dtype \n",
+      "---  ------                 --------------  ----- \n",
+      " 0   title                  7535 non-null   object\n",
+      " 1   release_date           7535 non-null   object\n",
+      " 2   genre                  7527 non-null   object\n",
+      " 3   duration               7522 non-null   object\n",
+      " 4   director               7535 non-null   object\n",
+      " 5   producers              7535 non-null   object\n",
+      " 6   cast                   7535 non-null   object\n",
+      " 7   nationality            7535 non-null   object\n",
+      " 8   distributor            7535 non-null   object\n",
+      " 9   box_office_title       7535 non-null   object\n",
+      " 10  box_office_first_week  7526 non-null   object\n",
+      " 11  press_eval             7535 non-null   object\n",
+      " 12  viewers_eval           7535 non-null   object\n",
+      " 13  views                  7535 non-null   int64 \n",
+      " 14  budget                 7535 non-null   object\n",
+      "dtypes: int64(1), object(14)\n",
+      "memory usage: 941.9+ KB\n"
      ]
     }
    ],
@@ -51,16 +51,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(7939, 15)"
+       "(7513, 15)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,16 +99,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Harmonisation des intitulés des genres\n",
     "\n",
     "def replace_drama(genres_list):\n",
-    "    if 'Drama' in genres_list:\n",
-    "        genres_list = [genre.replace('Drama', 'Drame') for genre in genres_list]\n",
+    "    if isinstance(genres_list, str):  # Vérifier si la valeur est de type str (liste de genres)\n",
+    "        genres_list = [genre.replace('Drama', 'Drame') for genre in genres_list.split(', ')]\n",
     "    return genres_list\n",
+    "\n",
     "\n",
     "# Appliquer la fonction personnalisée sur la colonne \"genres\"\n",
     "df['genre'] = df['genre'].str.split(', ').apply(replace_drama).str.join(', ')\n"
@@ -107,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,16 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = df[df['duration']>0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
