--- a/popularity_corner/best_model/feature_engineerin_sans_meteo2.ipynb
+++ b/popularity_corner/best_model/feature_engineerin_sans_meteo2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -21,28 +21,27 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 7519 entries, 0 to 7518\n",
-      "Data columns (total 16 columns):\n",
+      "RangeIndex: 7326 entries, 0 to 7325\n",
+      "Data columns (total 15 columns):\n",
       " #   Column                 Non-Null Count  Dtype  \n",
       "---  ------                 --------------  -----  \n",
-      " 0   title                  7519 non-null   object \n",
-      " 1   release_date           7519 non-null   object \n",
-      " 2   genre                  7519 non-null   object \n",
-      " 3   duration               7519 non-null   int64  \n",
-      " 4   director               7519 non-null   object \n",
-      " 5   producers              7519 non-null   object \n",
-      " 6   cast                   7519 non-null   object \n",
-      " 7   nationality            7519 non-null   object \n",
-      " 8   distributor            7519 non-null   object \n",
-      " 9   box_office_first_week  7519 non-null   int64  \n",
-      " 10  press_eval             7519 non-null   float64\n",
-      " 11  viewers_eval           7519 non-null   float64\n",
-      " 12  views                  7519 non-null   float64\n",
-      " 13  budget                 7519 non-null   float64\n",
-      " 14  season                 7519 non-null   object \n",
-      " 15  year                   7519 non-null   int64  \n",
-      "dtypes: float64(4), int64(3), object(9)\n",
-      "memory usage: 940.0+ KB\n"
+      " 0   title                  7326 non-null   object \n",
+      " 1   release_date           7326 non-null   object \n",
+      " 2   genre                  7326 non-null   object \n",
+      " 3   duration               7326 non-null   int64  \n",
+      " 4   director               7326 non-null   object \n",
+      " 5   producers              7326 non-null   object \n",
+      " 6   cast                   7326 non-null   object \n",
+      " 7   nationality            7326 non-null   object \n",
+      " 8   distributor            7326 non-null   object \n",
+      " 9   box_office_first_week  7326 non-null   object \n",
+      " 10  press_eval             7326 non-null   object \n",
+      " 11  viewers_eval           7326 non-null   object \n",
+      " 12  views                  7326 non-null   int64  \n",
+      " 13  budget                 7326 non-null   float64\n",
+      " 14  season                 7326 non-null   object \n",
+      "dtypes: float64(1), int64(2), object(12)\n",
+      "memory usage: 858.6+ KB\n"
      ]
     }
    ],
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -192,8 +191,8 @@
       "text/plain": [
        "Index(['title', 'release_date', 'genre', 'duration', 'director', 'producers',\n",
        "       'cast', 'nationality', 'distributor', 'box_office_first_week',\n",
-       "       'press_eval', 'viewers_eval', 'views', 'budget', 'season', 'year',\n",
-       "       'is_holiday', 'stars_actors', 'proportion_stars_producers',\n",
+       "       'press_eval', 'viewers_eval', 'views', 'budget', 'season', 'is_holiday',\n",
+       "       'stars_actors', 'proportion_stars_producers',\n",
        "       'proportion_stars_director', 'stars_producers_director',\n",
        "       'distributor_avg_frequency', 'genre_action', 'genre_animation',\n",
        "       'genre_arts martiaux', 'genre_aventure', 'genre_biopic',\n",
@@ -208,7 +207,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -227,61 +226,60 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 5611 entries, 0 to 7518\n",
-      "Data columns (total 50 columns):\n",
+      "Int64Index: 5493 entries, 0 to 7325\n",
+      "Data columns (total 49 columns):\n",
       " #   Column                      Non-Null Count  Dtype         \n",
       "---  ------                      --------------  -----         \n",
-      " 0   title                       5611 non-null   object        \n",
-      " 1   release_date                5611 non-null   datetime64[ns]\n",
-      " 2   genre                       5611 non-null   object        \n",
-      " 3   duration                    5611 non-null   int64         \n",
-      " 4   director                    5611 non-null   object        \n",
-      " 5   producers                   5611 non-null   object        \n",
-      " 6   cast                        5611 non-null   object        \n",
-      " 7   nationality                 5611 non-null   object        \n",
-      " 8   distributor                 5611 non-null   object        \n",
-      " 9   box_office_first_week       5611 non-null   int64         \n",
-      " 10  press_eval                  5611 non-null   float64       \n",
-      " 11  viewers_eval                5611 non-null   float64       \n",
-      " 12  views                       5611 non-null   float64       \n",
-      " 13  budget                      5611 non-null   float64       \n",
-      " 14  season                      5611 non-null   object        \n",
-      " 15  year                        5611 non-null   int64         \n",
-      " 16  is_holiday                  5611 non-null   bool          \n",
-      " 17  stars_actors                5611 non-null   int64         \n",
-      " 18  proportion_stars_producers  5611 non-null   int64         \n",
-      " 19  proportion_stars_director   5611 non-null   int64         \n",
-      " 20  stars_producers_director    5611 non-null   int64         \n",
-      " 21  distributor_avg_frequency   5611 non-null   float64       \n",
-      " 22  genre_action                5611 non-null   int64         \n",
-      " 23  genre_animation             5611 non-null   int64         \n",
-      " 24  genre_arts martiaux         5611 non-null   int64         \n",
-      " 25  genre_aventure              5611 non-null   int64         \n",
-      " 26  genre_biopic                5611 non-null   int64         \n",
-      " 27  genre_bollywood             5611 non-null   int64         \n",
-      " 28  genre_comédie               5611 non-null   int64         \n",
-      " 29  genre_comédie dramatique    5611 non-null   int64         \n",
-      " 30  genre_comédie musicale      5611 non-null   int64         \n",
-      " 31  genre_divers                5611 non-null   int64         \n",
-      " 32  genre_drame                 5611 non-null   int64         \n",
-      " 33  genre_epouvante-horreur     5611 non-null   int64         \n",
-      " 34  genre_erotique              5611 non-null   int64         \n",
-      " 35  genre_espionnage            5611 non-null   int64         \n",
-      " 36  genre_expérimental          5611 non-null   int64         \n",
-      " 37  genre_famille               5611 non-null   int64         \n",
-      " 38  genre_fantastique           5611 non-null   int64         \n",
-      " 39  genre_guerre                5611 non-null   int64         \n",
-      " 40  genre_historique            5611 non-null   int64         \n",
-      " 41  genre_judiciaire            5611 non-null   int64         \n",
-      " 42  genre_musical               5611 non-null   int64         \n",
-      " 43  genre_policier              5611 non-null   int64         \n",
-      " 44  genre_péplum                5611 non-null   int64         \n",
-      " 45  genre_romance               5611 non-null   int64         \n",
-      " 46  genre_science fiction       5611 non-null   int64         \n",
-      " 47  genre_sport event           5611 non-null   int64         \n",
-      " 48  genre_thriller              5611 non-null   int64         \n",
-      " 49  genre_western               5611 non-null   int64         \n",
-      "dtypes: bool(1), datetime64[ns](1), float64(5), int64(35), object(8)\n",
+      " 0   title                       5493 non-null   object        \n",
+      " 1   release_date                5493 non-null   datetime64[ns]\n",
+      " 2   genre                       5493 non-null   object        \n",
+      " 3   duration                    5493 non-null   int64         \n",
+      " 4   director                    5493 non-null   object        \n",
+      " 5   producers                   5493 non-null   object        \n",
+      " 6   cast                        5493 non-null   object        \n",
+      " 7   nationality                 5493 non-null   object        \n",
+      " 8   distributor                 5493 non-null   object        \n",
+      " 9   box_office_first_week       5493 non-null   object        \n",
+      " 10  press_eval                  5493 non-null   object        \n",
+      " 11  viewers_eval                5493 non-null   object        \n",
+      " 12  views                       5493 non-null   int64         \n",
+      " 13  budget                      5493 non-null   float64       \n",
+      " 14  season                      5493 non-null   object        \n",
+      " 15  is_holiday                  5493 non-null   bool          \n",
+      " 16  stars_actors                5493 non-null   int64         \n",
+      " 17  proportion_stars_producers  5493 non-null   int64         \n",
+      " 18  proportion_stars_director   5493 non-null   int64         \n",
+      " 19  stars_producers_director    5493 non-null   int64         \n",
+      " 20  distributor_avg_frequency   5493 non-null   float64       \n",
+      " 21  genre_action                5493 non-null   int64         \n",
+      " 22  genre_animation             5493 non-null   int64         \n",
+      " 23  genre_arts martiaux         5493 non-null   int64         \n",
+      " 24  genre_aventure              5493 non-null   int64         \n",
+      " 25  genre_biopic                5493 non-null   int64         \n",
+      " 26  genre_bollywood             5493 non-null   int64         \n",
+      " 27  genre_comédie               5493 non-null   int64         \n",
+      " 28  genre_comédie dramatique    5493 non-null   int64         \n",
+      " 29  genre_comédie musicale      5493 non-null   int64         \n",
+      " 30  genre_divers                5493 non-null   int64         \n",
+      " 31  genre_drame                 5493 non-null   int64         \n",
+      " 32  genre_epouvante-horreur     5493 non-null   int64         \n",
+      " 33  genre_erotique              5493 non-null   int64         \n",
+      " 34  genre_espionnage            5493 non-null   int64         \n",
+      " 35  genre_expérimental          5493 non-null   int64         \n",
+      " 36  genre_famille               5493 non-null   int64         \n",
+      " 37  genre_fantastique           5493 non-null   int64         \n",
+      " 38  genre_guerre                5493 non-null   int64         \n",
+      " 39  genre_historique            5493 non-null   int64         \n",
+      " 40  genre_judiciaire            5493 non-null   int64         \n",
+      " 41  genre_musical               5493 non-null   int64         \n",
+      " 42  genre_policier              5493 non-null   int64         \n",
+      " 43  genre_péplum                5493 non-null   int64         \n",
+      " 44  genre_romance               5493 non-null   int64         \n",
+      " 45  genre_science fiction       5493 non-null   int64         \n",
+      " 46  genre_sport event           5493 non-null   int64         \n",
+      " 47  genre_thriller              5493 non-null   int64         \n",
+      " 48  genre_western               5493 non-null   int64         \n",
+      "dtypes: bool(1), datetime64[ns](1), float64(2), int64(34), object(11)\n",
       "memory usage: 2.1+ MB\n"
      ]
     }
@@ -292,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,11 +307,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_model.to_csv('df_model_sans_meteo2.csv')"
+    "df_model.to_csv('df_model_sans_meteo.csv')"
    ]
   }
  ],
