--- a/popularity_corner/best_model/modelisation_sans_meteo_extratree.ipynb
+++ b/popularity_corner/best_model/modelisation_sans_meteo_extratree.ipynb
@@ -2,13 +2,88 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
     "\n",
-    "df = pd.read_csv('df_model_sans_meteo2.csv',index_col=0)"
+    "df = pd.read_csv('df_model_sans_meteo.csv',index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 5493 entries, 0 to 7325\n",
+      "Data columns (total 37 columns):\n",
+      " #   Column                     Non-Null Count  Dtype  \n",
+      "---  ------                     --------------  -----  \n",
+      " 0   duration                   5493 non-null   int64  \n",
+      " 1   nationality                5493 non-null   object \n",
+      " 2   box_office_first_week      5493 non-null   object \n",
+      " 3   views                      5493 non-null   int64  \n",
+      " 4   budget                     5493 non-null   float64\n",
+      " 5   season                     5493 non-null   object \n",
+      " 6   stars_actors               5493 non-null   int64  \n",
+      " 7   stars_producers_director   5493 non-null   int64  \n",
+      " 8   distributor_avg_frequency  5493 non-null   float64\n",
+      " 9   genre_action               5493 non-null   int64  \n",
+      " 10  genre_animation            5493 non-null   int64  \n",
+      " 11  genre_arts martiaux        5493 non-null   int64  \n",
+      " 12  genre_aventure             5493 non-null   int64  \n",
+      " 13  genre_biopic               5493 non-null   int64  \n",
+      " 14  genre_bollywood            5493 non-null   int64  \n",
+      " 15  genre_comédie              5493 non-null   int64  \n",
+      " 16  genre_comédie dramatique   5493 non-null   int64  \n",
+      " 17  genre_comédie musicale     5493 non-null   int64  \n",
+      " 18  genre_divers               5493 non-null   int64  \n",
+      " 19  genre_drame                5493 non-null   int64  \n",
+      " 20  genre_epouvante-horreur    5493 non-null   int64  \n",
+      " 21  genre_erotique             5493 non-null   int64  \n",
+      " 22  genre_espionnage           5493 non-null   int64  \n",
+      " 23  genre_expérimental         5493 non-null   int64  \n",
+      " 24  genre_famille              5493 non-null   int64  \n",
+      " 25  genre_fantastique          5493 non-null   int64  \n",
+      " 26  genre_guerre               5493 non-null   int64  \n",
+      " 27  genre_historique           5493 non-null   int64  \n",
+      " 28  genre_judiciaire           5493 non-null   int64  \n",
+      " 29  genre_musical              5493 non-null   int64  \n",
+      " 30  genre_policier             5493 non-null   int64  \n",
+      " 31  genre_péplum               5493 non-null   int64  \n",
+      " 32  genre_romance              5493 non-null   int64  \n",
+      " 33  genre_science fiction      5493 non-null   int64  \n",
+      " 34  genre_sport event          5493 non-null   int64  \n",
+      " 35  genre_thriller             5493 non-null   int64  \n",
+      " 36  genre_western              5493 non-null   int64  \n",
+      "dtypes: float64(2), int64(32), object(3)\n",
+      "memory usage: 1.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "# Supprimer les espaces avec une expression régulière\n",
+    "df['box_office_first_week'] = df['box_office_first_week'].apply(lambda x: re.sub(r'\\s+', '', x))\n",
+    "\n",
+    "# Convertir en flottant\n",
+    "df['box_office_first_week'] = df['box_office_first_week'].astype(float)\n"
    ]
   },
   {
@@ -26,17 +101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['duration', 'nationality', 'views', 'budget', 'season', 'is_holiday',\n",
-       "       'proportion_stars_actors', 'proportion_stars_producers',\n",
-       "       'proportion_stars_director', 'distributor_avg_frequency',\n",
-       "       'genre_action', 'genre_animation', 'genre_arts martiaux',\n",
-       "       'genre_aventure', 'genre_biopic', 'genre_bollywood', 'genre_comédie',\n",
+       "Index(['duration', 'nationality', 'views', 'budget', 'season', 'stars_actors',\n",
+       "       'stars_producers_director', 'distributor_avg_frequency', 'genre_action',\n",
+       "       'genre_animation', 'genre_arts martiaux', 'genre_aventure',\n",
+       "       'genre_biopic', 'genre_bollywood', 'genre_comédie',\n",
        "       'genre_comédie dramatique', 'genre_comédie musicale', 'genre_divers',\n",
        "       'genre_drame', 'genre_epouvante-horreur', 'genre_erotique',\n",
        "       'genre_espionnage', 'genre_expérimental', 'genre_famille',\n",
@@ -47,7 +121,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +407,7 @@
     {
      "data": {
       "text/plain": [
-       "0.7367240943067084"
+       "0.7438470718983332"
       ]
      },
      "execution_count": 32,
@@ -404,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -436,27 +510,27 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>num__budget</td>\n",
-       "      <td>2.085739e-01</td>\n",
+       "      <td>2.065762e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>num__views</td>\n",
-       "      <td>1.606565e-01</td>\n",
+       "      <td>1.831394e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>5</th>\n",
        "      <td>num__distributor_avg_frequency</td>\n",
-       "      <td>1.074951e-01</td>\n",
+       "      <td>1.056393e-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>num__proportion_stars_actors</td>\n",
-       "      <td>9.934054e-02</td>\n",
+       "      <td>num__stars_actors</td>\n",
+       "      <td>9.895434e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>num__duration</td>\n",
-       "      <td>5.765914e-02</td>\n",
+       "      <td>5.533602e-02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -464,50 +538,50 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>cat__nationality_Serbie</td>\n",
-       "      <td>9.374756e-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>cat__nationality_Thaïlande</td>\n",
-       "      <td>4.546291e-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>remainder__genre_divers</td>\n",
-       "      <td>3.733472e-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>cat__nationality_kazakhstan</td>\n",
-       "      <td>2.437424e-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>88</th>\n",
+       "      <th>86</th>\n",
        "      <td>remainder__genre_expérimental</td>\n",
-       "      <td>1.392994e-08</td>\n",
+       "      <td>9.571089e-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61</th>\n",
+       "      <td>cat__nationality_Thaïlande</td>\n",
+       "      <td>4.084876e-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>cat__nationality_Lituanie</td>\n",
+       "      <td>3.197504e-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55</th>\n",
+       "      <td>cat__nationality_Serbie</td>\n",
+       "      <td>1.261308e-07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>remainder__genre_divers</td>\n",
+       "      <td>0.000000e+00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>102 rows × 2 columns</p>\n",
+       "<p>100 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                           Feature    Importance\n",
-       "2                      num__budget  2.085739e-01\n",
-       "1                       num__views  1.606565e-01\n",
-       "6   num__distributor_avg_frequency  1.074951e-01\n",
-       "3     num__proportion_stars_actors  9.934054e-02\n",
-       "0                    num__duration  5.765914e-02\n",
+       "2                      num__budget  2.065762e-01\n",
+       "1                       num__views  1.831394e-01\n",
+       "5   num__distributor_avg_frequency  1.056393e-01\n",
+       "3                num__stars_actors  9.895434e-02\n",
+       "0                    num__duration  5.533602e-02\n",
        "..                             ...           ...\n",
-       "57         cat__nationality_Serbie  9.374756e-07\n",
-       "63      cat__nationality_Thaïlande  4.546291e-07\n",
-       "83         remainder__genre_divers  3.733472e-07\n",
-       "69     cat__nationality_kazakhstan  2.437424e-07\n",
-       "88   remainder__genre_expérimental  1.392994e-08\n",
+       "86   remainder__genre_expérimental  9.571089e-07\n",
+       "61      cat__nationality_Thaïlande  4.084876e-07\n",
+       "41       cat__nationality_Lituanie  3.197504e-07\n",
+       "55         cat__nationality_Serbie  1.261308e-07\n",
+       "81         remainder__genre_divers  0.000000e+00\n",
        "\n",
-       "[102 rows x 2 columns]"
+       "[100 rows x 2 columns]"
       ]
      },
      "metadata": {},
